--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\Antlr4.4.5-alpha002\build\Antlr4.props" Condition="Exists('..\packages\Antlr4.4.5-alpha002\build\Antlr4.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,9 +10,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ZScript</RootNamespace>
     <AssemblyName>ZScript</AssemblyName>
-    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <NuGetPackageImportStamp>215d62b8</NuGetPackageImportStamp>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -36,9 +38,9 @@
     <DocumentationFile>bin\Release\ZScript.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Antlr4.Runtime, Version=4.5.0.0, Culture=neutral, PublicKeyToken=e78b2c5abd1fcb3f, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>D:\dev\Antlr\Antlr4.Runtime.dll</HintPath>
+    <Reference Include="Antlr4.Runtime, Version=4.5.0.0, Culture=neutral, PublicKeyToken=e9931a4108ef2354, processorArchitecture=MSIL">
+      <HintPath>..\packages\Antlr4.Runtime.4.5-alpha002\lib\net45\Antlr4.Runtime.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -84,7 +86,13 @@
     <Compile Include="Elements\ZClass.cs" />
     <Compile Include="Elements\ZConstructor.cs" />
     <Compile Include="Elements\ZMethod.cs" />
-    <Compile Include="Parsing\ANTLRExtend\ParserExtensions.cs" />
+    <Compile Include="Parsing\ANTLR\ParserExtensions.cs" />
+    <Compile Include="Parsing\ANTLR\ZScript.g4.lexer.cs">
+      <DependentUpon>ZScript.g4</DependentUpon>
+    </Compile>
+    <Compile Include="Parsing\ANTLR\ZScript.g4.parser.cs">
+      <DependentUpon>ZScript.g4</DependentUpon>
+    </Compile>
     <Compile Include="Runtime\Execution\TypeList.cs" />
     <Compile Include="Runtime\Execution\Wrappers\Callables\ClassMethod.cs" />
     <Compile Include="Runtime\Execution\Wrappers\Callables\ZClassMethod.cs" />
@@ -156,10 +164,6 @@
     <Compile Include="Parsing\ConstantAtomParser.cs" />
     <Compile Include="Parsing\ValueParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Parsing\ANTLR\ZScriptBaseListener.cs" />
-    <Compile Include="Parsing\ANTLR\ZScriptLexer.cs" />
-    <Compile Include="Parsing\ANTLR\ZScriptListener.cs" />
-    <Compile Include="Parsing\ANTLR\ZScriptParser.cs" />
     <Compile Include="Runtime\Execution\FunctionVM.cs" />
     <Compile Include="Runtime\Execution\VirtualMemory\LocalMemory.cs" />
     <Compile Include="Runtime\Execution\Wrappers\IMemberWrapper.cs" />
@@ -197,17 +201,29 @@
     <Compile Include="Utils\TokenUtils.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="ZScript.g4" />
-    <None Include="Parsing\ANTLR\ZScript.tokens" />
-    <None Include="Parsing\ANTLR\ZScriptLexer.tokens" />
+    <None Include="packages.config" />
+    <Antlr4 Include="Parsing\ANTLR\ZScript.g4">
+      <Generator>MSBuild:Compile</Generator>
+      <CustomToolNamespace>ZScript.Parsing.ANTLR</CustomToolNamespace>
+    </Antlr4>
     <None Include="ZScript.licenseheader" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Parsing\ANTLRExtend\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>
     </PreBuildEvent>
   </PropertyGroup>
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\Antlr4.4.5-alpha002\build\Antlr4.props')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Antlr4.4.5-alpha002\build\Antlr4.props'))" />
+    <Error Condition="!Exists('..\packages\Antlr4.4.5-alpha002\build\Antlr4.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Antlr4.4.5-alpha002\build\Antlr4.targets'))" />
+  </Target>
+  <Import Project="..\packages\Antlr4.4.5-alpha002\build\Antlr4.targets" Condition="Exists('..\packages\Antlr4.4.5-alpha002\build\Antlr4.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
