Fixing an edge case where expressions with an expected type of an optional tuple would not infer types correctly inside

--- a/ZScriptTests/ZScriptTests.csproj
+++ b/ZScriptTests/ZScriptTests.csproj
@@ -90,6 +90,7 @@
     <Compile Include="CodeGeneration\Tokenization\PostfixExpressionTokenizer+TupleTests.cs" />
     <Compile Include="CodeGeneration\Tokenization\PostfixExpressionTokenizerTests.cs" />
     <Compile Include="CodeGeneration\Tokenization\StatementTokenizerTests.cs" />
+    <Compile Include="CrashCases\TupleCrashCaseTests.cs" />
     <Compile Include="Elements\OptionalTests.cs" />
     <Compile Include="Elements\TokenFactoryTests.cs" />
     <Compile Include="Elements\ZObjectTests.cs" />
