. Adding trailing if statements for expression and return statements . Fixing issue where case labels in Switch statements would not infer types correctly . Replacing most ClearStack instruction insertions with Pops to balance the stack

--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -82,6 +82,7 @@
     <Compile Include="CodeGeneration\Tokenization\IntermediaryTokenList.cs" />
     <Compile Include="CodeGeneration\Tokenization\Statements\ForEachStatementTokenizer.cs" />
     <Compile Include="CodeGeneration\Tokenization\Statements\IParserContextTokenizer.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Statements\TrailingIfStatementTokernizer.cs" />
     <Compile Include="Elements\Optional.cs" />
     <Compile Include="Elements\ZClass.cs" />
     <Compile Include="Elements\ZConstructor.cs" />
