--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -60,6 +60,7 @@
     <Compile Include="CodeGeneration\Analysis\Definitions\FunctionParametersAnalyzer.cs" />
     <Compile Include="CodeGeneration\Analysis\Definitions\GenericSignatureAnalyzer.cs" />
     <Compile Include="CodeGeneration\Analysis\Definitions\UnusedDefinitionsAnalyzer.cs" />
+    <Compile Include="CodeGeneration\Analysis\GenericTypeResolver.cs" />
     <Compile Include="CodeGeneration\Analysis\GenericTypeSource.cs" />
     <Compile Include="CodeGeneration\Analysis\StaticTypeAnalyzer.cs" />
     <Compile Include="CodeGeneration\Analysis\ExpressionConstantResolver.cs" />
