Starting implementation of basic generic call type resolver

--- a/ZScriptTests/packages.config
+++ b/ZScriptTests/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Antlr4" version="4.5.0-alpha002" targetFramework="net46" userInstalled="true" />
   <package id="Antlr4.Runtime" version="4.5.0-alpha002" targetFramework="net46" userInstalled="true" />
+  <package id="MSTest.TestAdapter" version="1.1.18" targetFramework="net452" />
+  <package id="MSTest.TestFramework" version="1.1.18" targetFramework="net452" />
   <package id="RhinoMocks" version="4.0.0-alpha3" targetFramework="net45" userInstalled="true" />
 </packages>
