--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -42,8 +42,14 @@
       <HintPath>..\packages\Antlr4.Runtime.4.5-alpha002\lib\net45\Antlr4.Runtime.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="JetBrains.Annotations, Version=10.2.1.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <HintPath>..\packages\JetBrains.Annotations.10.2.1\lib\net\JetBrains.Annotations.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.ValueTuple, Version=4.0.1.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.3.0\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -56,6 +62,7 @@
     <Compile Include="Builders\TypeBuildingContext.cs" />
     <Compile Include="CodeGeneration\Analysis\ClassDefinitionExpander.cs" />
     <Compile Include="CodeGeneration\Analysis\CodeScope.cs" />
+    <Compile Include="CodeGeneration\Analysis\ConstraintSolver.cs" />
     <Compile Include="CodeGeneration\Analysis\ControlFlowAnalyzer.cs" />
     <Compile Include="CodeGeneration\Analysis\Definitions\FunctionParametersAnalyzer.cs" />
     <Compile Include="CodeGeneration\Analysis\Definitions\GenericSignatureAnalyzer.cs" />
@@ -76,6 +83,7 @@
     <Compile Include="CodeGeneration\Definitions\SequenceDefinition.cs" />
     <Compile Include="CodeGeneration\Definitions\TypeContainerDefinition.cs" />
     <Compile Include="CodeGeneration\Definitions\TypeAliasMethodDefinition.cs" />
+    <Compile Include="CodeGeneration\ILGenerator\ILGen.cs" />
     <Compile Include="CodeGeneration\RuntimeGenerationContext.cs" />
     <Compile Include="CodeGeneration\Definitions\TypeAliasDefinition.cs" />
     <Compile Include="CodeGeneration\Analysis\ExpressionTypeAnalyzer.cs" />
@@ -200,6 +208,7 @@
     <Compile Include="CodeGeneration\Messages\Warning.cs" />
     <Compile Include="CodeGeneration\ZRuntimeGenerator.cs" />
     <Compile Include="Runtime\ZRuntimeDefinition.cs" />
+    <Compile Include="Utils\Ensure.cs" />
     <Compile Include="Utils\ExpressionUtils.cs" />
     <Compile Include="Utils\ListUtils.cs" />
     <Compile Include="Utils\TokenUtils.cs" />
