--- a/ZScript/packages.config
+++ b/ZScript/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="Antlr4" version="4.5.0-alpha002" targetFramework="net46" userInstalled="true" />
   <package id="Antlr4.Runtime" version="4.5.0-alpha002" targetFramework="net46" userInstalled="true" />
+  <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net45" />
 </packages>
